dark mode common android and ios corrected

--- a/src/global.scss
+++ b/src/global.scss
@@ -359,6 +359,61 @@ body.dark {
 
 
 /*
+   * Android Dark Theme
+   * -------------------------------------------
+   */
+
+.md body.dark {
+    --ion-background-color: #1f1e1e;
+    --ion-background-color-rgb: 0, 0, 0;
+    --ion-text-color: #ffffff;
+    --ion-text-color-rgb: 255, 255, 255;
+    --ion-color-step-50: #0d0d0d;
+    --ion-color-step-100: #1a1a1a;
+    --ion-color-step-150: #262626;
+    --ion-color-step-200: #333333;
+    --ion-color-step-250: #404040;
+    --ion-item-background: #000000;
+    --ion-card-background: #1c1c1d;
+    ion-searchbar {
+        padding-top: 10px;
+    }
+    .sl-select select,
+    .sl-form-control,
+    .select2-container--default .select2-selection--single,
+    .sl-signupform .sl-btnarea .sl-checkbox label:before,
+    .sl-signupform .sl-btnarea .sl-radio label:before,
+    .sl-signupform .sl-btnarea .sl-checkbox label:after,
+    .sl-signupform .sl-btnarea .sl-radio label:after,
+    .otp-input,
+    .sl-messageUser__area--right p,
+    .sl-messageUser__area--left p {
+        background: black!important;
+        border-color: black!important;
+    }
+    .sl-signupform .sl-btnarea .sl-checkbox label:before,
+    .sl-signupform .sl-btnarea .sl-radio label:before,
+    .sl-signupform .sl-btnarea .sl-checkbox label:after,
+    .sl-signupform .sl-btnarea .sl-radio label:after {
+        color: white;
+    }
+    .otp-input:focus-visible,
+    .otp-input:focus,
+    .otp-input {
+        border: none!important;
+        outline: none!important;
+    }
+    app-chat ion-toolbar {
+        --background: black;
+    }
+    .sl-emoji .sl-form-control {
+        background: #2f2f2f!important;
+        border-color: #2f2f2f!important;
+    }
+}
+
+
+/*
    * iOS Dark Theme
    * -------------------------------------------
    */
@@ -402,6 +457,10 @@ body.dark {
     .otp-input {
         border: none!important;
         outline: none!important;
+    }
+    .sl-emoji .sl-form-control {
+        background: #2f2f2f!important;
+        border-color: #2f2f2f!important;
     }
 }
 
